--- a/Backend/Servicio_1/Api.Candidatos/Api.Candidatos/appsettings.json
+++ b/Backend/Servicio_1/Api.Candidatos/Api.Candidatos/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=DB_API;User Id=sa;Password=Password123!;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
