feat (backend): Configuración de docker para que se cree la base de datos directamente #40

--- a/Backend/Servicio_1/Api.Candidatos/Dockerfile
+++ b/Backend/Servicio_1/Api.Candidatos/Dockerfile
@@ -5,8 +5,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
-
+ENV ASPNETCORE_ENVIRONMENT=Development
 
 # Esta fase se usa para compilar el proyecto de servicio
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
@@ -27,5 +26,4 @@ RUN dotnet publish "./Api.Candidatos.csproj" -c $BUILD_CONFIGURATION -o /app/pub
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENV ASPNETCORE_URLS=http://+:8080
 ENTRYPOINT ["dotnet", "Api.Candidatos.dll"]
