--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2019-latest
@@ -10,26 +12,27 @@ services:
       - "1433:1433"
     volumes:
       - sqlserver_data:/var/opt/mssql
+      - ./path_to_your_sql_scripts/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     networks:
       - app-network
+
   api:
     build:
-      context: ./Servicio_1/Api.Candidatos  # Ruta a tu código fuente de la API
-      dockerfile: ./Dockerfile       # Opcional, solo si el Dockerfile no está en el directorio raíz
+      context: ./Servicio_1/Api.Candidatos
+      dockerfile: ./Dockerfile
     container_name: api_candidatos
     ports:
-      - "5000:80"  # Mapea el puerto 5000 de tu máquina local al puerto 80 del contenedor
-      - "8080:8080"  # Mapea el puerto 5000 de tu máquina local al puerto 80 del contenedor
-      - "8081:8081"  # Mapea el puerto 5000 de tu máquina local al puerto 80 del contenedor
+      - "5000:8080"
     environment:
       - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=DB_API;User Id=sa;Password=Password123!;TrustServerCertificate=True
     depends_on:
-      - sqlserver  # Asegura que SQL Server esté disponible antes de iniciar la API
+      - sqlserver
     networks:
       - app-network
+
 volumes:
   sqlserver_data:
 
 networks:
-  app-network:  # Creamos una red personalizada para que los contenedores se puedan comunicar
-    driver: bridge  # Esto usa la red por defecto 'bridge', puedes dejarlo así.
+  app-network:
+    driver: bridge
