--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -1,4 +1,18 @@
-version: '3.8'
+volumes:
+  sqlserver_data:
+  kong_data: {}
+  kong_prefix_vol:
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
+  kong_tmp_vol:
+    driver_opts:
+      type: tmpfs
+      device: tmpfs
+
+networks:
+  kong-net:
+    driver: bridge
 
 services:
   sqlserver:
@@ -6,15 +20,14 @@ services:
     container_name: sql_server
     restart: always
     environment:
-      SA_PASSWORD: "Password123!"
+      MSSQL_SA_PASSWORD: ${SQLSERVER_PASSWORD}  # Usamos la variable de entorno desde el archivo .env
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
     volumes:
       - sqlserver_data:/var/opt/mssql
-      - ./path_to_your_sql_scripts/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     networks:
-      - app-network
+      - kong-net
 
   api:
     build:
@@ -24,15 +37,44 @@ services:
     ports:
       - "5000:8080"
     environment:
-      - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=DB_API;User Id=sa;Password=Password123!;TrustServerCertificate=True
+      - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=${DB_NAME};User Id=sa;Password=${SQLSERVER_PASSWORD};TrustServerCertificate=True
     depends_on:
       - sqlserver
     networks:
-      - app-network
+      - kong-net
 
-volumes:
-  sqlserver_data:
-
-networks:
-  app-network:
-    driver: bridge
+  kong:
+    image: "${KONG_DOCKER_TAG:-kong:latest}"
+    user: "${KONG_USER:-kong}"
+    environment:
+      KONG_DATABASE: "off"  # Desactiva PostgreSQL y usa configuración declarativa
+      KONG_DECLARATIVE_CONFIG: "/opt/kong/kong.yaml"  # Apunta a la configuración YAML
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_PROXY_LISTEN: "0.0.0.0:8000"
+      KONG_ADMIN_LISTEN: "0.0.0.0:8001"
+      KONG_ADMIN_GUI_LISTEN: "0.0.0.0:8002"
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_PREFIX: "/var/run/kong"
+    networks:
+      - kong-net
+    ports:
+      - "8000:8000"   # Proxy HTTP
+      - "8443:8443"   # Proxy HTTPS
+      - "8001:8001"   # Admin API HTTP
+      - "8444:8444"   # Admin API HTTPS
+      - "8002:8002"   # Kong Admin GUI
+    healthcheck:
+      test: [ "CMD", "kong", "health" ]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+    restart: on-failure:5
+    read_only: true
+    volumes:
+      - kong_prefix_vol:/var/run/kong
+      - kong_tmp_vol:/tmp
+      - ./config/kong.yaml:/opt/kong/kong.yaml  # Monta el archivo kong.yaml
+    security_opt:
+      - no-new-privileges
