--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,11 +6,17 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint . --ext .ts,.astro"
   },
   "dependencies": {
-    "@astrojs/vue": "^5.0.6",
-    "astro": "^5.2.5",
-    "vue": "^3.5.13"
+    "astro": "^5.2.5"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx": "^0.1.0"
   }
 }
