--- a/Backend/Servicio_1/Api.Candidatos/Api.Candidatos/appsettings.Development.json
+++ b/Backend/Servicio_1/Api.Candidatos/Api.Candidatos/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=DB_API;User Id=sa;Password=Password123!;TrustServerCertificate=True"
+  },
+  "JwtSettings": {
+    "Secret": "EstaEsUnaLlaveSecretaMuySeguraDebeTener32Caracteres",
+    "Issuer": "tuapi.com",
+    "Audience": "tuapi.com"
   }
+
 }
