--- a/Backend/Servicio_1/Api.Candidatos/Api.Candidatos/appsettings.json
+++ b/Backend/Servicio_1/Api.Candidatos/Api.Candidatos/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=DB_API;User Id=sa;Password=Password123!;TrustServerCertificate=True"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JwtSettings": {
+    "Secret": "EstaEsUnaLlaveSecretaMuySeguraDebeTener32Caracteres",
+    "Issuer": "tuapi.com",
+    "Audience": "tuapi.com"
+  }
+
 }
