--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,10 +13,14 @@
     "astro": "^5.2.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "eslint": "^8.57.1",
     "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-jsx": "^0.1.0"
+    "eslint-plugin-jsx": "^0.1.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "ts-jest": "^29.2.6"
   }
 }
