--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,10 +7,12 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint . --ext .ts,.astro"
+    "lint": "eslint . --ext .ts,.astro",
+    "test": "jest"
   },
   "dependencies": {
-    "astro": "^5.2.5"
+    "astro": "^5.2.5",
+    "chart.js": "^4.4.8"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
