--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -83,3 +83,16 @@ services:
       - ./config/kong.yaml:/opt/kong/kong.yaml  # Monta el archivo kong.yaml
     security_opt:
       - no-new-privileges
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"  # Acceso a la interfaz web de Prometheus
+    volumes:
+      - ./config/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    networks:
+      - kong-net
+    restart: always
