--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.57.1",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx": "^0.1.0",
+    "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "ts-jest": "^29.2.6"
