feat (ci): Actualizados jobs integración continua (lint y test) y corregidos errores linting #42

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,14 @@ jobs:
         working-directory: Frontend
         run: npm run lint
 
-  # test:
-  #   name: Ejecutar tests unitarios y de integración
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Instalar dependencias
-  #       working-directory: Frontend
-  #       run: npm install
-  #     - name: Ejecutar jest
-  #       working-directory: Frontend
-  #       run: npm run test
+  test:
+    name: Ejecutar tests unitarios y de integración
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Instalar dependencias
+        working-directory: Frontend
+        run: npm install
+      - name: Ejecutar jest
+        working-directory: Frontend
+        run: npm run test
