--- a/Frontend/.eslintrc.json
+++ b/Frontend/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["plugin:astro/recommended"],
+  "extends": ["plugin:astro/recommended", "plugin:@typescript-eslint/recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
@@ -14,8 +14,19 @@
         "extraFileExtensions": [".astro"]
       },
       "rules": {
-        // override/add rules settings here, such as:
-        // "astro/no-set-html-directive": "error"
+        "astro/no-set-html-directive": "warn",
+        "astro/no-unused-css-selector": "warn"
+      }
+    },
+    {
+      "files": ["*.ts", "*.tsx"],
+      "rules": {
+        "no-unused-vars": "off",
+        "no-var": "off",
+        "@typescript-eslint/no-unused-vars": "warn",
+        "@typescript-eslint/no-var-requires": "warn",
+        "@typescript-eslint/no-require-imports": "warn",
+        "@typescript-eslint/no-explicit-any": "off"
       }
     }
   ]
