--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@testing-library/dom": "^10.4.0",
     "astro": "^5.2.5",
     "chart.js": "^4.4.8"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
