feat (backend): Cambio de kong a modo con base de datos, añadido plugin de logs, añadido plugin de jwt, reorganización de carpetas #40

--- a/Backend/Servicio_2/Api.Autenticacion/TestAuthentication/TestAuthentication.csproj
+++ b/Backend/Servicio_2/Api.Autenticacion/TestAuthentication/TestAuthentication.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Api.Autenticacion\Api.Autenticacion\Api.Autenticacion.csproj" />
+    <ProjectReference Include="..\Api.Autenticacion\Api.Autenticacion.csproj" />
   </ItemGroup>
 
   <ItemGroup>
