--- a/Backend/Servicio_2/Api.Autenticacion/Dockerfile
+++ b/Backend/Servicio_2/Api.Autenticacion/Dockerfile
@@ -5,8 +5,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
-
+ENV ASPNETCORE_ENVIRONMENT=Development
 
 # Esta fase se usa para compilar el proyecto de servicio
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
