--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,10 @@ Backend/.env
 
 # Continuous Integration
 .circleci/
-.github/
-.gitlab-ci.yml
 azure-pipelines.yml
 
 # Environment
 .env
+
+*-lock.json
+*node_modules
