--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -178,10 +178,11 @@ services:
     container_name: web_frontend
     ports:
       - "1234:1234"
+    environment:
+      - PUBLIC_API_URL=http://api_candidatos:8080  
     volumes:
       - ./Frontend:/app
       - /app/node_modules
-    command: ["npm", "run", "dev", "--", "--host","--port", "1234"]
     depends_on:
       - api
     networks:
