fix (testing): Modificados tests frontend para cambiar de jest a vitest #42

--- a/.github/workflows/ci_frontend.yml
+++ b/.github/workflows/ci_frontend.yml
@@ -31,6 +31,6 @@ jobs:
       - name: Instalar dependencias
         working-directory: Frontend
         run: npm install
-      - name: Ejecutar jest
+      - name: Ejecutar vitest
         working-directory: Frontend
         run: npm run test
