--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,7 +8,7 @@
     "preview": "astro preview",
     "astro": "astro",
     "lint": "eslint . --ext .ts,.astro",
-    "test": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -17,15 +17,12 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
-    "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "eslint": "^8.57.1",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx": "^0.1.0",
-    "jest-canvas-mock": "^2.5.2",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-fetch-mock": "^3.0.3",
-    "ts-jest": "^29.2.6"
+    "vitest": "^3.1.2",
+    "vitest-canvas-mock": "^0.3.3"
   }
 }
