--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -15,6 +15,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "strict": true,
-    "allowJs": true
+    "allowJs": true,
+    "types": ["vitest/globals"]
   }
 }
