--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,15 @@ services:
     networks:
       - internal-net
 
+  db_initializer:
+    build:
+      context: ./Backend/scripts
+      dockerfile: ./Dockerfile
+    environment:
+      DB_USER: sa
+      DB_PASSWORD: ${SQLSERVER_API_PASSWORD}
+      DB_SERVER: ${SQLSERVER_HOST}
+
   sqlserver_auth:
     image: mcr.microsoft.com/mssql/server:2019-latest
     container_name: sqlserver_auth
@@ -175,11 +184,13 @@ services:
     build:
       context: ./Frontend
       dockerfile: Dockerfile
+      args:
+        PUBLIC_API_URL: "${PUBLIC_API_URL}"
     container_name: web_frontend
     ports:
       - "1234:1234"
     environment:
-      - PUBLIC_API_URL=http://api_candidatos:8080  
+      - PUBLIC_API_URL="${PUBLIC_API_URL}"
     volumes:
       - ./Frontend:/app
       - /app/node_modules
