feat (despliegue): primera versión funcional de terraform (creación de frontend y api candidatos) #70

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,13 @@ azure-pipelines.yml
 
 *-lock.json
 *node_modules
+
+# Terraform
+Terraform/*.tfstate
+Terraform/*.tfstate.*
+Terraform/*.tfvars
+Terraform/*.tfvars.json
+Terraform/*tfplan
+Terraform/*tfplan.*
+Terraform/.terraform
+Terraform/.terraform.*
