--- a/Backend/Servicio_1/Api.Candidatos/Api.Candidatos/appsettings.Development.json
+++ b/Backend/Servicio_1/Api.Candidatos/Api.Candidatos/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=DB_API;User Id=sa;Password=Password123!;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1433;Database=DB_API;User Id=sa;Password=Password123!;TrustServerCertificate=True",
+    "MasterConnection": "Server=localhost,1433;Database=master;User Id=sa;Password=Password123!;TrustServerCertificate=True"
   },
   "JwtSettings": {
     "Secret": "EstaEsUnaLlaveSecretaMuySeguraDebeTener32Caracteres",
