--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,7 @@ services:
       - "5000:8080"
     environment:
       - ConnectionStrings__DefaultConnection=Server=sqlserver_api;Database=${DB_NAME_API};User Id=sa;Password=${SQLSERVER_API_PASSWORD};TrustServerCertificate=True
+      - ConnectionStrings__MasterConnection=Server=master;Database=${DB_NAME_API};User Id=sa;Password=${SQLSERVER_API_PASSWORD};TrustServerCertificate=True
     depends_on:
       - sqlserver_api
     networks:
@@ -188,9 +189,7 @@ services:
         PUBLIC_API_URL: "${PUBLIC_API_URL}"
     container_name: web_frontend
     ports:
-      - "1234:1234"
-    # environment:
-    #   - PUBLIC_API_URL="${PUBLIC_API_URL}"
+      - "3000:3000"
     volumes:
       - ./Frontend:/app
       - /app/node_modules
