--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host --port 3000",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
@@ -11,12 +11,14 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@astrojs/node": "^9.2.1",
     "@testing-library/dom": "^10.4.0",
     "astro": "^5.2.5",
     "chart.js": "^4.4.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
+    "@types/node": "^22.15.3",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "eslint": "^8.57.1",
