--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.57.1",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx": "^0.1.0",
+    "jsdom": "^26.1.0",
     "vitest": "^3.1.2",
     "vitest-canvas-mock": "^0.3.3"
   }
