--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -84,7 +84,25 @@ jobs:
         run: npm install
       - name: Ejecutar Vitest
         working-directory: Frontend
-        run: npm run test
+        run:
+          npm run test
+
+          # ---------------------------
+  # Obtención de variables de entorno y terraform
+  # ---------------------------
+  preparar-variables:
+    name: Preparar archivos sensibles
+    runs-on: ubuntu-latest
+    needs: [backend-test, frontend-test]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Crear archivo .env
+        run: echo "${{ secrets.DOTENV_CONTENT }}" > .env
+
+      - name: Crear archivo env.tfvars
+        run: echo "${{ secrets.TFVARS_CONTENT }}" > env.tfvars
 
   # ---------------------------
   # Deploy ECR (Terraform)
@@ -92,7 +110,7 @@ jobs:
   terraform-ecr:
     name: Terraform - Crear ECR
     runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test]
+    needs: preparar-variables
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -124,23 +142,7 @@ jobs:
 
       - name: Terraform Apply
         working-directory: Terraform
-        run: terraform apply -auto-approve -target=module.ecr
-
-  # ---------------------------
-  # Obtención de variables de entorno y terraform
-  # ---------------------------
-  preparar-variables:
-    name: Preparar archivos sensibles
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Crear archivo .env
-        run: echo "${{ secrets.DOTENV_CONTENT }}" > .env
-
-      - name: Crear archivo env.tfvars
-        run: echo "${{ secrets.TFVARS_CONTENT }}" > env.tfvars
+        run: terraform apply -auto-approve -target=module.ecr -var-file=env.tfvars
 
   # ---------------------------
   # Build y Push
@@ -148,7 +150,7 @@ jobs:
   build-push:
     name: Build, Tag y Push imágenes a ECR
     runs-on: ubuntu-latest
-    needs: [preparar-variables, terraform-ecr]
+    needs: terraform-ecr
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -186,7 +188,7 @@ jobs:
   terraform:
     name: Terraform - Crear infraestructura
     runs-on: ubuntu-latest
-    needs: [preparar-variables, build-push]
+    needs: build-push
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
