--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -84,25 +84,7 @@ jobs:
         run: npm install
       - name: Ejecutar Vitest
         working-directory: Frontend
-        run:
-          npm run test
-
-          # ---------------------------
-  # Obtención de variables de entorno y terraform
-  # ---------------------------
-  preparar-variables:
-    name: Preparar archivos sensibles
-    runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Crear archivo .env
-        run: echo "${{ secrets.DOTENV_CONTENT }}" > .env
-
-      - name: Crear archivo env.tfvars
-        run: echo "${{ secrets.TFVARS_CONTENT }}" > env.tfvars
+        run: npm run test
 
   # ---------------------------
   # Deploy ECR (Terraform)
@@ -110,7 +92,7 @@ jobs:
   terraform-ecr:
     name: Terraform - Crear ECR
     runs-on: ubuntu-latest
-    needs: preparar-variables
+    needs: [backend-test, frontend-test]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -122,6 +104,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ env.AWS_REGION }}
+
+      - name: Crear archivo env.tfvars
+        run: echo "${{ secrets.TFVARS_CONTENT }}" > env.tfvars
 
       - name: Configurar Terraform
         uses: hashicorp/setup-terraform@v2
@@ -157,6 +142,9 @@ jobs:
 
       - name: Login a AWS ECR
         uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Crear archivo .env
+        run: echo "${{ secrets.DOTENV_CONTENT }}" > .env
 
       - name: Build imágenes con docker-compose
         run: docker-compose build
@@ -200,6 +188,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ env.AWS_REGION }}
+
+      - name: Crear archivo env.tfvars
+        run: echo "${{ secrets.TFVARS_CONTENT }}" > env.tfvars
 
       - name: Configurar Terraform
         uses: hashicorp/setup-terraform@v2
