--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -106,7 +106,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Obtener archivo env.tfvars
-        run: aws s3 cp s3://gtio-votacion-config/env.tfvars env.tfvars
+        run: aws s3 cp s3://gtio-votacion-config/env.tfvars Terraform/env.tfvars
 
       - name: Configurar Terraform
         uses: hashicorp/setup-terraform@v2
@@ -190,7 +190,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Crear archivo env.tfvars
-        run: aws s3 cp s3://gtio-votacion-config/env.tfvars env.tfvars
+        run: aws s3 cp s3://gtio-votacion-config/env.tfvars Terraform/env.tfvars
 
       - name: Configurar Terraform
         uses: hashicorp/setup-terraform@v2
