--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -151,6 +151,12 @@ jobs:
       - name: Login a ECR
         uses: aws-actions/amazon-ecr-login@v2
 
+      - name: Instalar Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.6/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose version
+
       - name: Crear archivo .env
         run: aws s3 cp s3://gtio-votacion-config/.env .env
 
