--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -181,8 +181,11 @@ jobs:
         #   docker tag $API_AUTENTICACION_IMAGE ${{ env.ECR_REGISTRY }}/$ECR_API_AUTENTICACION_IMAGE:${{ env.IMAGE_TAG }}
         #   docker push ${{ env.ECR_REGISTRY }}/$ECR_API_AUTENTICACION_IMAGE:${{ env.IMAGE_TAG }}
 
+  # ---------------------------
+  # Terraform - Crear infraestructura y API
+  # ---------------------------
   terraform-infrastructure-api:
-    name: Terraform - Crear infraestructura
+    name: Terraform - Crear infraestructura y API
     runs-on: ubuntu-latest
     needs: build-push-api
     steps:
@@ -232,8 +235,14 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Ejecutar script de poblamiento
-        run: curl -X POST http://balanceador-candidatos-1237790035.us-east-1.elb.amazonaws.com:8080/api/Candidates/CrearBaseDeDatos
+      - name: Ejecutar script de poblamiento cuando esté disponible
+        run: |
+          echo "Esperando a que la API esté disponible para poblar la base de datos..."
+          until curl --silent --fail -X POST http://balanceador-candidatos-1237790035.us-east-1.elb.amazonaws.com:8080/api/Candidates/CrearBaseDeDatos; do
+            echo "La API aún no está disponible o falló el poblamiento. Reintentando en 10 segundos..."
+            sleep 10
+          done
+          echo "Poblamiento completado correctamente."
 
   # ---------------------------
   # Build y Push del frontend
@@ -280,3 +289,46 @@ jobs:
           # WEB FRONTEND
           docker tag $FRONTEND_IMAGE ${{ env.ECR_REGISTRY }}/$ECR_FRONTEND_IMAGE:${{ env.IMAGE_TAG }}
           docker push ${{ env.ECR_REGISTRY }}/$ECR_FRONTEND_IMAGE:${{ env.IMAGE_TAG }}
+
+  # ---------------------------
+  # Terraform - Crear servicio frontend
+  # ---------------------------
+  terraform-frontend:
+    name: Terraform - Crear servicio frontend
+    runs-on: ubuntu-latest
+    needs: build-push-api
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Configurar AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Crear archivo env.tfvars
+        run: aws s3 cp s3://gtio-votacion-config/env.tfvars Terraform/env.tfvars
+
+      - name: Configurar Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: "latest"
+
+      - name: Terraform Init
+        working-directory: Terraform
+        run: echo yes | terraform init -input=false
+
+      - name: Terraform Format
+        working-directory: Terraform
+        run: terraform fmt
+
+      - name: Terraform Validate
+        working-directory: Terraform
+        run: terraform validate
+
+      - name: Terraform Apply
+        working-directory: Terraform
+        run: terraform apply -auto-approve -var-file=env.tfvars -target=module.frontend -var-file=env.tfvars
