--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -8,7 +8,8 @@
     "dist"
   ],
   "compilerOptions": {
-    "jsx": "preserve",
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
     "module": "Node16",
     "target": "ESNext",
     "moduleResolution": "node16",
