--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -224,20 +224,12 @@ jobs:
         working-directory: Terraform
         run: terraform apply -auto-approve -var-file=env.tfvars -target=module.infrastructure -target=module.api -target=module.frontend
 
-      - name: Terraform Output
-        working-directory: Terraform
-        id: output
-        run: |
-          terraform output -raw ecs_cluster_name > cluster.txt
-          terraform output -raw ecs_service_name_api > service_api.txt
-          terraform output -raw ecs_service_name_frontend > service_frontend.txt
-
       - name: Actualizar servicios de ECS
         working-directory: Terraform
         run: |
-          export CLUSTER_NAME=$(cat cluster.txt)
-          export SERVICE_NAME_API=$(cat service_api.txt)
-          export SERVICE_NAME_FRONTEND=$(cat service_frontend.txt)
+          CLUSTER_NAME=$(terraform output -raw ecs_cluster_name)
+          SERVICE_NAME_API=$(terraform output -raw ecs_service_name_api)
+          SERVICE_NAME_FRONTEND=$(terraform output -raw ecs_service_name_frontend)
 
           # Actualizar el servicio de la API
           aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME_API --force-new-deployment
