--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -224,17 +224,23 @@ jobs:
         working-directory: Terraform
         run: terraform apply -auto-approve -var-file=env.tfvars -target=module.infrastructure -target=module.api -target=module.frontend
 
-      - name: Actualizar servicios de ECS
+      - name: Terraform Output
+        id: terraform_outputs
         working-directory: Terraform
         run: |
-          CLUSTER_NAME=$(terraform output -raw ecs_cluster_name)
-          SERVICE_NAME_API=$(terraform output -raw ecs_service_name_api)
-          SERVICE_NAME_FRONTEND=$(terraform output -raw ecs_service_name_frontend)
+          echo "cluster_name=$(terraform output -raw ecs_cluster_name)" >> "$GITHUB_OUTPUT"
+          echo "service_api=$(terraform output -raw ecs_service_name_api)" >> "$GITHUB_OUTPUT"
+          echo "service_frontend=$(terraform output -raw ecs_service_name_frontend)" >> "$GITHUB_OUTPUT"
 
-          # Actualizar el servicio de la API
-          aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME_API --force-new-deployment
-          # Actualizar el servicio del frontend
-          aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME_FRONTEND --force-new-deployment
+      - name: Actualizar servicios ECS
+        run: |
+          aws ecs update-service --cluster "${{ steps.terraform_outputs.outputs.cluster_name }}" \
+                              --service "${{ steps.terraform_outputs.outputs.service_api }}" \
+                              --force-new-deployment
+
+          aws ecs update-service --cluster "${{ steps.terraform_outputs.outputs.cluster_name }}" \
+                              --service "${{ steps.terraform_outputs.outputs.service_frontend }}" \
+                              --force-new-deployment
 
   # ---------------------------
   # Poblar la base de datos
